...
            android:text="Playlist Name:      "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/playlist_name_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Playlist Name">
        </EditText>
    </LinearLayout>
<!--    <LinearLayout-->
...
